# cheater

./: Cargo.toml  README.md
cheatsheets/: Android_Emulator.json  AppCode_Shortcuts.json  Atom.json  Blender.json  Brackets.json  Chrome_Dev_Tools.json  Grafx2.json  IntelliJ_Shortcuts.json  Jira_Shortcuts.json  Scrivener.json  Sourcetree.json  Sublime_Text_2.json  Sublime_Text_3.json  Textastic.json  Trello.json  Visual_Studio_Code.json
src/: helpers.rs  main.rs
