[package]
name = "cheater"
version = "0.1.0"
authors = ["Eli Yukelzon <reflog@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cheatsheets for GUI apps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version="",features=["v3_20"]}
glib = ""
inputbot = ""
xcb = ""
byteorder = ""
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "", optional = true}
include_dir = {version = "", features = ["search"] }
[dependencies.i3_ipc]
version = ""
optional = true

[features]
default = ["i3"]
i3 = ["i3_ipc","regex"]
